--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@ header {
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-bottom: 70px
 }
 
 h1 {
@@ -23,11 +22,16 @@ h1 {
 }
 
 .search-box {
-    width: 200px;
+    width: 300px;
     height: 20px;
     border: none;
     border: 2px solid red;
     padding: 10px;
+    margin-bottom: 50px;
+}
+
+.recipes-container {
+    margin-bottom: 75px;
 }
 
 .coffee-container {
@@ -35,7 +39,6 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
 }
 
 .coffee-container .item-wrapper {
@@ -55,6 +58,10 @@ h1 {
     padding: 5px;
 }
 
+.item-wrapper {
+    margin-bottom: 15px;
+}
+
 .coffeeless-drinks-container,
 .iced-drinks-container,
 .matcha-drinks-container,
@@ -64,6 +71,14 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.coffee-container,
+.coffeeless-drinks-container,
+.iced-drinks-container,
+.matcha-drinks-container,
+.smoothie-container,
+.seasonal-drinks-container {
     gap: 50px;
 }
 
